# kicad-winbuilder

./: .bzrignore  .gitattributes  .gitignore  0001-Default-saved-paths-to-environment-variables-if-avai.patch  0001-Do-not-set-wxSetAssertHandler-on-non-debug-builds.patch  0001-Replace-avhttp-with-libcurl-implementation.patch  CHANGELOG  KICAD_WINBUILDER_LATEST_VERSION.TXT  KiCad-Winbuilder.cmake  KiCadWinbuilder.cmake  PKGBUILD  PKGBUILD-3d_initial_merge  PKGBUILD-DEBUG  PKGBUILD-STABLE  PKGBUILD-STABLE-5.0  PKGBUILD-STABLE-5.1  PKGBUILD-STABLE-DEBUG  PKGBUILD-kicad_new3d-viewer  PKGBUILD-ngspice-git  README.TXT  RunKiCad.bat  copydlls.sh  enterenv.bat  git-cmake-version-v3.patch  git-cmake-version-v4.patch  make.bat  make_all.bat  make_i686.bat  make_x86_64.bat  readme.md  setenv.bat
env/: BuildEnv.cmake  make.bat  make_all.bat  make_i686.bat  make_x86_64.bat
env/support/: patch.exe.manifest  pycrusttest.py
env/support/bzip2/: CMakeLists.txt
nsis/: Chinese.nsh  English.nsh  German.nsh  Greek.nsh  Italian.nsh  Spanish.nsh  install.nsi
profile/userprofile/AppData/Roaming/bazaar/2.0/: rules
